add ability to update and delete tasks

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </header>
 
 <body>
-  <main class="page-content">
+  <main id="page-content" class="page-content">
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks to do</h2>
       <ul id="tasks-to-do" class="task-list">
